app/assets/stylesheets/profile.less
@import "global";

.profile-header {
  min-height: 460px;
  margin-top: 0px;
  padding-top: 90px;
  background: url(../images/default-profile-banner.jpg) no-repeat center center;
  background-size: cover;
  position: relative;
  color: @main-text-white;
  margin-bottom: 20px;
}

.profile-header::after {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  content: "";
  background-color: rgba(0, 0, 0, 0.6);
}

.profile-info {
  padding: 20px 0px;
  margin: 0px;
  margin-top: 30px !important;
}

.profile-user--avatar {
    margin: 0px 0px 20px;
    padding: 0px;
    z-index: 5;
}

.profile-user--avatar img {
  margin-left: auto;
  margin-right: auto;
  border-radius: 8px;
  width: 73px;
  height: 73px;
}

.profile-user--details {
  margin: 0px;
  padding: 0px 20px 60px;
  z-index: 5;
}

.profile-user--name {
  color: white;
  font-weight: 300;
  font-size: 28pt;
  margin-bottom: 5px;
}

.profile-user--alias {
  color: @main-text-white - #111;
  font-size: 14pt;
  padding-left: 15px;
}

.profile-user--description {
  color: white;
  font-weight: 300;
  font-size: 13pt;
  margin-bottom: 15px;
  max-width: 640px;
  line-height: 1.5;
}

.profile-user--badge {
  margin: 0;
}

.profile-user--badge li {
  padding: 8px 18px 0px;
  margin-top: 5px;
  margin-right: 5px;
}

.profile-user--badge-item {
  background-color: @sproutup-green;
  color: white;
  border-radius: 2px;
  width: auto;
  height: 40px;
  font-size: 12pt;
  font-weight: 400;
}

.profile-user--badge-item.rewards {
  background-color: @sproutup-darkgold;
}

.profile-menu {
  background: -webkit-linear-gradient(bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.85));
  background: -o-linear-gradient(bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.85));
  background: -moz-linear-gradient(bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.85));
  background: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.85));
  position: relative;
  bottom: 0;
  border-top: solid 1px @sproutup-dark-grey;
  border-bottom: solid 1px @sproutup-dark-grey;
  z-index: 5;
  margin: 0px;
}

.profile-menu-body {
    max-width: 360px;
    padding: 0px;
    margin: 0px 40px;
}

.profile-menu--item {
    padding: 0px;
    margin: 0px;
}

.profile-menu--item a {
  color: rgba(255,255,255,0.75);
  padding: 0px 10px;
  text-decoration: none !important;
}

.profile-menu--item a.active {
  color: @sproutup-blue-bright;
}

.profile-menu--item a:hover {
  color: @sproutup-blue-bright;
  text-decoration: none !important;
}

.profile-menu--item-value {
  text-align: center;
  display: block;
  font-size: 13pt;
  font-weight: 400;
}

.profile-menu--item-label {
  text-align: center;
  display: block;
  font-size: 11pt;
  font-weight: 400;
}

.btn-outline--save {
  height: 36px;
  width: 69px;
  margin-left: 5px;
  margin-right: 5px;
  border: solid 1px @sproutup-btn-outline;
  font-weight: 400;
  font-size: 10pt;
  color: @sproutup-btn-outline;
  background: 0 0;
  border-radius: 2px;
  padding-top: 8px;
  padding-left: 20px;
  padding-right: 20px;
}

.btn-outline--save:hover {
  border: solid 1px @sproutup-blue-bright;
  color: @sproutup-blue-bright;
}

.btn-outline--save:focus {
  border: solid 1px @sproutup-btn-outline;
  color: @sproutup-btn-outline;
}

.btn-following {
  height: 36px;
  margin-left: 5px;
  margin-right: 5px;
  font-weight: 400;
  font-size: 10pt;
  color: white;
  background-color: @sproutup-blue;
  border-radius: 2px;
  padding-top: 8px;
  padding-left: 20px;
  padding-right: 20px;
}

.btn-following i {
  padding-right: 8px;
}

.btn-following:hover {
  color: white;
}

.btn-following:focus {
  color: white;
  background-color: @sproutup-blue;
}

.wrapper-user-profile {
  margin: 0px;
  overflow: hidden;
}

.upload-new-avatar {
  overflow: hidden;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  border-radius: 6px;
  height: 160px;
  width: 160px;
  margin: 0px auto;
}

.profile-user-social-buttons {
    padding-top: 10px;
    padding-bottom: 20px;
}

ul.profile-user-social-buttons li a {
  display: block;
  width: 36px;
  height: 36px;
  border-radius: 100%;
  font-size: 12pt;
  line-height: 34px;
  outline: 0;
  color: #fff;
  background-color: none;
  -webkit-transition: all .3s;
  -moz-transition: all .3s;
  transition: all .3s;
  border: solid 1px #fff;
  text-align: center;
}

ul.profile-user-social-buttons li a:hover {
  background-color: @sproutup-blue;
  color: white;
  border: solid 1px white;
}

.profile-content {
    margin: 10px;
}

.user-trial-wrapper {
  width: 100%;
  height: 230px;
  margin-bottom: 40px;
}

.user-trial-picture {
  width: 200px;
  height: 200px;
  float: left;
}

.user-trial-info {
  display: inline-block;
  background-color:rgba(0, 0, 0, 0.5);
  color: white;
  padding: 15px 25px;
}

.user-trial-product-name {
  font-weight: bold;
  font-size: 15pt;
  position: relative;
  top: -6px;
}

.user-trial-status {
  display: inline-block;
  padding: 8px 10px;
  margin-top: 6px;
  margin-bottom: 4px;
  border-radius: 2px;
}

.user-trial-status.requested {
  background-color: @sproutup-blue;
}

.user-trial-status.active {
  background-color: @sproutup-green;
}

.user-trial-status.completed {
  background-color: @sproutup-orange;
}

.user-profile-menu {
  border-bottom: 1px dashed @sproutup-blue;
  padding: 0px 0px 20px;
}

.user-profile-menu-buzz {
  margin-right: 20px;
}

.user-profile-buzz-wrapper {
  margin-top: 30px !important;
}

.user-profile-menu-item {
  display: inline-block !important;
  padding: 6px;
  width: 78px;
  height: 40px;
  text-align: center;
  padding-top: 8px;
  color: @sproutup-blue;
  border-radius: 3px;
  font-size: 12pt;
}

.user-profile-menu-item:hover {
  background-color: @sproutup-grey;
  color: white;
  cursor: pointer;
}

.active-profile-button {
  background-color: #2996cc !important;
  color: white !important;
}

.user-profile-menu-bar {
  width: 2px;
  height: 41px;
  position: absolute;
  background-color: @sproutup-blue;
  display: inline-block;
}

.user-profile-menu-item:link, .user-profile-menu-item:visited, .user-profile-menu-item:hover, .user-profile-menu-item:active {
  text-decoration: none !important;
}

.user-profile-content {
  margin-top: 20px;
}

.my-profile-trial-page {
  max-width: 640px;
  margin: 50px auto;
  padding: 0px;
}

.my-profile-trial-page.empty {
  margin: 30px auto;
}

.profile-input-row {
  height: 65px !important;
}

.profile-input-row .success {
  color: #65bc25;
}

.profile-input-row .error {
  color: #ed7a14;
}

.profile-input-row .username-message {
  margin-left: 350px;
  position: relative;
  top: 3px;
}

.rewards-link {
  color: white;
}

.product-menu--content.stats {
  margin: 0px auto;
  max-width: 640px;
  position: relative;
  left: 74px;
  bottom: 12px;
  padding-left: 0px;
  text-align: center;
}

.product-menu--content.stats div {
  text-align: center;
  padding-bottom: 0px;
}



.stats-link div:first-child {
  color: white;
  font-size: 11pt;
}

.stats-link div:last-child {
  color: @sproutup-gold;
  font-size: 13pt;
  font-weight: 700;
  padding-bottom: 4px;
}

.stats-link.active div:last-child {
  border-bottom: @sproutup-gold;
}

.stats-link:hover, .stats-link:active, .stats-link:visited, .stats-link:link {
  underline: none !important;
  text-decoration: none !important;
}

.active-stat {
  border-bottom: 6px solid @sproutup-gold;
}

@media (min-width:767px) {
  .profile-user--avatar img {
    position: relative;
    top: 12px;
    margin-right: 30px !important;
  }
  .profile-user--details {
    padding-left: 5px;
  }
}

@media (max-width:767px) {
    .profile-user--details {
        text-align: center;
    }

    .profile-user--name {
      font-weight: 400;
      font-size: 16pt;
    }

    .profile-user--description {
      font-weight: 300;
      font-size: 11.5pt;
    }

    ul.profile-user-social-buttons li a {
      width: 30px;
      height: 30px;
      border-radius: 100%;
      font-size: 11pt;
      line-height: 30px;
      outline: 0;
      color: #fff;
      background-color: none;
      -webkit-transition: all .3s;
      -moz-transition: all .3s;
      transition: all .3s;
      border: solid 1px #fff;
      text-align: center;
    }

    .profile-menu--item-value {
      font-size: 13pt;
      font-weight: 400;
    }

    .profile-menu--item-label {
      font-size: 12pt;
      font-weight: 400;
    }

    .profile-menu--item {
      padding: 8px 10px 12px;
      text-decoration: none !important;
    }

    .profile-menu-body {
      max-width: none;
      padding: 0px auto;
      margin: 0px auto;
    }

    .product-menu--content.stats div {
      display: inline-block;
      width: 90px;
    }

    .stats-link div {
      display: block !important;
    }

    .product-menu--content.stats {
      left: 0px;
      width: 700px;
      text-align: left;
    }

    .profile-user--badge li {
      position: relative;
      bottom: 18px;
    }
}

